<resources>
    <string name="app_name">Student Scheduler</string>
    <string name="tap_to_enter">Tap to Enter</string>
    <string name="term_1">Term 1</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="courses">Courses</string>
    <string name="todo">TODO</string>
    <string name="enterButton">Tap To Enter</string>
    <string name="openImage">TODO</string>
    <string name="pending">TODO</string>
    <string name="title">Title</string>
    <string name="term_start">Term Start</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="term_end">Term End</string>
    <string name="mm_dd_yyyy1">MM/DD/YYYY</string>
    <string name="termTitle">Title</string>
    <string name="startdate">StartDate</string>
    <string name="enddate">EndDate</string>
    <string name="view_terms">View Terms</string>
    <string name="tap_to_view_terms">Tap To View Terms</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_student">Welcome Student!</string>
    <string name="noteTitle">Title</string>
    <string name="test_note_content">Test Note Content</string>
    <string name="todo1">TODO</string>
    <string name="note_test_content">Note test content.</string>
    <string name="noteTitle1">Title</string>
    <string name="name">Name</string>
    <string name="this_is_test_note_content">This is test note content</string>
    <string name="assessmentName">Name</string>
    <string name="type">Type</string>
    <string name="objectiveAssessment">OA</string>
    <string name="performanceAssessment">PA</string>
    <string name="goalDate">Goal Date</string>
    <string name="mmddyyyy">MM/DD/YYYY</string>
    <string name="alarm">Alarm</string>
    <string name="view_term_list">View Term List</string>
    <string name="course_title">Course Title</string>
    <string name="course_end_date">End Date</string>
    <string name="status">Status</string>
    <string name="assessment_title">Title</string>
    <string name="_01_01_2020">01-01-2020</string>
    <string name="tap_to_add_terms">Tap To Add Terms</string>
    <string name="to_do">TODO</string>
    <string name="course_detail_title">Course Title</string>
    <string name="textview">TextView</string>
    <string name="course_detail_end_date">End Date</string>
    <string name="course_detail_status">Status</string>
    <string name="mentor_name">Mentor Name</string>
    <string name="mentor_email">Mentor Email</string>
    <string name="mentor_phone_number">Mentor Phone Number</string>
    <string name="course_detail_status2">Status</string>
    <string name="course_detail_start_date">Start Date</string>
    <string name="estimated_end_date">Estimated End Date</string>
    <string name="course_mentor">Course Mentor</string>
    <string name="course_detail_name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="course_detail_todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="notes">Notes</string>
    <string name="assessments">Assessments</string>
    <string name="assessment_todo">TODO</string>
    <string name="assessment_detail_title">Assessment Title</string>
    <string name="assessment_detail_type">Type</string>
    <string name="pa">PA</string>
    <string name="assessment_detail_textview">TextView</string>
    <string name="due_date">Due Date</string>
    <string name="todo_detail">TODO</string>
    <string name="todo_detail2">TODO</string>
    <string name="course_name">Course Name</string>
    <string name="course_start_date">Start Date</string>
    <string name="course_mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="course_end_eta">Course End (eta)</string>
    <string name="course_alarm">Alarm</string>
    <string name="course_status">Status</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="dropped">Dropped</string>
    <string name="plan_to_take">Plan To Take</string>
    <string name="course_instructor">Course Mentor</string>
    <string name="instructor_name">Mentor Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="AddTerm" />
    <string name="save">Save</string>
    <string name="view_term_courses">View Term Courses</string>
    <string name="view_term_courses1">View Term Courses</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="end_date1">End Date</string>
    <string name="set_alarm2">Set Alarm</string>
    <string name="course_instructor2">Course Instructor</string>
    <string name="instructor_name2">Instructor Name</string>
    <string name="title3">Title</string>
    <string name="todo5">TODO</string>
    <string name="test_note_content2">Test Note Content</string>
    <string name="note_title">Title</string>
    <string name="todo6">TODO</string>
    <string name="note_title_detail">Title</string>
    <string name="test_note_content3">Test Note Content</string>
</resources>