<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.LinearLayoutCompat
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".activities.AddEditCourseActivity">

        <EditText
            android:id="@+id/edit_course_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course_name"
            android:inputType="text"
            android:autofillHints="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_start_date" />

        <EditText
            android:id="@+id/edit_course_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:inputType="date"
            android:autofillHints="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_end_eta"
            />

        <EditText
            android:id="@+id/edit_course_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:inputType="date"
            android:autofillHints="" />

        <CheckBox
            android:id="@+id/edit_course_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_alarm" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_status"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/edit_course_radio_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_course_status_in_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_progress" />

            <RadioButton
                android:id="@+id/radio_course_status_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed" />

            <RadioButton
                android:id="@+id/radio_course_status_dropped"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dropped" />

            <RadioButton
                android:id="@+id/radio_course_status_planned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_to_take" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_instructor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_course_mentor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/instructor_name"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edit_course_mentor_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:autofillHints="" />

        <EditText
            android:id="@+id/edit_course_mentor_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:autofillHints="" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>