<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_view_term_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_alignParentStart="true"
            android:text="@string/termTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:ellipsize="end"
            />

        <TextView
            android:id="@+id/text_view_term_start_date"
            android:layout_marginEnd="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_below="@id/text_view_term_title"
            android:text="@string/startdate"
            />

        <TextView
            android:id="@+id/text_view_term_end_date"
            android:layout_width="67dp"
            android:layout_height="59dp"
            android:layout_below="@id/text_view_term_title"
            android:layout_alignParentStart="true"
            android:layout_marginStart="323dp"
            android:layout_marginTop="2dp"
            android:text="@string/enddate"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>